# hd-google-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chainlit_demo.py  docker-compose.yml  flows.md  gemini.md  main.py  pyproject.toml
data/: mock.db
mock_data/: components.py  data_manager.py  dealer_products.py  dealers.py  flows.md  orders.py  personas.py  plants.py  products.py
scripts/: seed_mock_db.py
src/hd_google_hackathon/: __init__.py  config.py  flows.py  mock_db.py
src/hd_google_hackathon/agents/configuration_agent/: agent.py
src/hd_google_hackathon/agents/erp_sherpa_agent/: agent.py
src/hd_google_hackathon/agents/installer_support_agent/: agent.py
src/hd_google_hackathon/agents/investigation_agent/: agent.py
src/hd_google_hackathon/agents/metrics_insight_agent/: agent.py
src/hd_google_hackathon/agents/onboarding_agent/: agent.py
src/hd_google_hackathon/agents/playbook_author_agent/: agent.py
src/hd_google_hackathon/agents/policy_compliance_agent/: agent.py
src/hd_google_hackathon/domain/: component.py  dealer.py  order.py  plant.py  product.py
src/hd_google_hackathon/utils/: __init__.py  tooling.py
templates/: index.html
tests/: conftest.py  test_flows.py
tests/data/: test_data_manager.py
tests/mocks/: mock_component_repository.py  mock_dealer_repository.py  mock_order_repository.py  mock_plant_repository.py  mock_product_repository.py
tests/mocks/data/: __init__.py  components.py  dealer_products.py  dealers.py  orders.py  plants.py  products.py
(+14 files in other folders)
